After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641400 - [deinterlace] Handle image caps without asserting
[deinterlace] Handle image caps without asserting
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 0.10.29
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-03 19:33 UTC by Thiago Sousa Santos
Modified: 2011-03-08 15:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
deinterlace: Handle image caps without asserting (6.00 KB, patch)
2011-02-03 19:33 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2011-02-03 19:33:03 UTC
Deinterlace asserts if it gets caps with framerate=0/1

This happens when trying to open an image in totem (did this
by mistake this morning)
Comment 1 Thiago Sousa Santos 2011-02-03 19:33:07 UTC
Created attachment 180017 [details] [review]
deinterlace: Handle image caps without asserting

Images might have framerate=0/1 in the caps, which caused an
assertion on deinterlace. I don't know of interlaced image formats
but deinterlace might be hardcoded on some generic pipelines and
it shouldn't assert.

The fix was to set field_duration to 0 if the input has a framerate
with a 0 numerator.

This patch also adds checks for this situation on the unit tests.
Comment 2 David Schleef 2011-02-03 21:39:34 UTC
Looks good.
Comment 3 Thiago Sousa Santos 2011-02-04 12:47:34 UTC
Fixed by cb527623a31bf9cc701630f90c8754f336dd874b